BasePair, BasePair::operaor=(), insert(itr, Val)
* typedef std::pair<KEY, VALUE> as "BasePair".
* use BasePair::operaor=() in Assignment operator overload.
* use insert(itr, Val) in insert function.

--- a/Tester/Tester.vcxproj
+++ b/Tester/Tester.vcxproj
@@ -71,11 +71,13 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PostBuildEvent>
-      <Command>cd /d "$(TargetDir)"
+      <Command>cd /d "$(SolutionDir)"
+doxygen.exe Doxyfile
+cd /d "$(TargetDir)"
 WinUnit "$(TargetPath)"</Command>
     </PostBuildEvent>
     <PostBuildEvent>
-      <Message>Unit Test</Message>
+      <Message>Doxygen &amp; Unit Test</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
